--- a/VeryGoodBook_web/src/main/webapp/login.html
+++ b/VeryGoodBook_web/src/main/webapp/login.html
@@ -39,7 +39,7 @@
 		</nav>
 		<article>
 			<div class="login">
-				<form id="memberForm" action="/#" method="GET">
+				<form id="memberForm" method="POST" action="login.do">
 				<p>
 					<label>帳號：</label><input type="text" name="id" placeholder="請輸入id/email/手機號碼" required>
 				</p>
