--- a/VeryGoodBook_web/src/main/webapp/register.html
+++ b/VeryGoodBook_web/src/main/webapp/register.html
@@ -7,7 +7,7 @@
 		<title>鋼彈模型店</title>
 		<link rel="stylesheet" href="./css/gfs_main.css">
 		<style type="text/css">
-			sup{color: red;}
+			sup, span sub{color: red; font-size: 18pt;}
 			
 			.personalInfo{
 			position: center, center;
@@ -34,9 +34,10 @@
 		</nav>
 		<article>
 			<div class="personalInfo">
-				<form action="#" method="post">
+				<form action="#" method="POST">
+					<span>「<sub>*</sub>」為必填項目</span>
 					<p>
-						<label><sup>*</sup>帳號：</label><input type="text" name="id" placeholder="請輸入身份證字號" pattern="[A-Z][1289][0-9]{8}" maxlength="10" required>
+						<label><sup>*</sup>身份證字號：</label><input type="text" name="id" placeholder="請輸入身份證字號" pattern="[A-Z][1289][0-9]{8}" maxlength="10" required>
 					</p>
 					<p>
 						<label><sup>*</sup>電子郵箱：</label><input type="email" name="email" placeholder="請輸入e-mail" required>
@@ -49,7 +50,7 @@
 						<input type="checkbox" id="displayPwdCheckBox" onchange="showPassword()"><label>顯示密碼</label>
 					</p>
 					<p>
-						<label><sup>*</sup>姓名：</label><input type="text" name="name" placeholder="請輸入姓名" minlength="2" maxlength="60" required>
+						<label><sup>*</sup>姓名：</label><input type="text" name="name" placeholder="請輸入姓名" minlength="2" maxlength="20" required>
 					</p>
 					<p>
 						<label><sup>*</sup>性別：</label><select name="gender" required>
